Listo el AboutUs y el Contact (solo falta implementar el correo)

--- a/css/style.css
+++ b/css/style.css
@@ -370,3 +370,15 @@ acomodar el navbar-toggler */
 /* espaciados */
 
 
+.containerAbout {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  width: 100%;
+  max-width: 900px;     /* Limita el ancho */
+  margin: 0 auto;       /* Centra horizontalmente */
+  padding: 2rem 1rem;   /* Espacio interno */
+}
+
