--- a/css/style.css
+++ b/css/style.css
@@ -382,3 +382,16 @@ acomodar el navbar-toggler */
   padding: 2rem 1rem;   /* Espacio interno */
 }
 
+@media (max-width: 768px) {
+.containerAbout {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  width: 100%;
+  max-width: 900px;     /* Limita el ancho */
+  margin: 0 auto;       /* Centra horizontalmente */
+  padding: 2rem 1rem;   /* Espacio interno */
+}
+}
